# Variant

./: CMakeLists.txt
.github/workflows/: code-format.yml  unit-ci.yml
include/: variant.hpp
test/: CMakeLists.txt  variant_smoke_test.cpp  visitor_smoke_test.cpp
